# UA-CS-BSc1_Computer-Graphics-Engine

./: CMakeCache.txt  CMakeLists.txt  Color.cpp  Color.h  Face.cpp  Face.h  Figure.cpp  Figure.h  Line2D.cpp  Line2D.h  Makefile  Point2D.cpp  Point2D.h  README.md  ZBuffer.cpp  ZBuffer.h  cmake_install.cmake  easy_image.cc  easy_image.h  engine  engine.cc  wireframe.cpp  wireframe.h
2Dobjects/: Line2D.h  Point2D.cpp
ExtraFeatures/: InfPointLight.h  Light.h  Shadow.h  ViewFrustum.h  ZBuffer.h
ExtraFeatures/Lsystems/: LSystemUtils.cpp  LSystemUtils.h
Figure/: Color.h  Face.h  Figure.cpp  Figure.h  FigureDrawer.h  FigureUtils.h
Figure/ExtraAndUtils/: Color.h  Face.h  FigureDrawer.h  FigureUtils.h
Image/: GenerateImage.h  easy_image.cc  easy_image.h
Lines/: Line2D.h  Point2D.h
Lsystems/: LSystemUtils.cpp  LSystemUtils.h
Utilities/: Color.h  Utils.cpp  Utils.h  easy_image.cc  easy_image.h
